# Paragon-server

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/database/: auth.rs  database.rs  mod.rs  structures.rs
src/database/documents/: data.sql
src/database/graphql/: graphql.rs  mod.rs  mutation.rs  query.rs
src/database/rest/: rest.rs
src/utils/: auth.rs
src/websocket/: auth.rs  handler.rs  mod.rs  structures.rs  websocket.rs
