[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
common = { path = "../Common" }
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = "0.26.2" # Don't know why but this removes bug
tungstenite = "0.26.2" # Same
uuid = { version = "1.17.0", features = ["v4"] }
